--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,9 +13,9 @@
 
     <fragment
         android:id="@+id/navigation_settings"
-        android:name="com.example.battery.ui.dashboard.DashboardFragment"
+        android:name="com.example.battery.ui.dashboard.SettingsFragment"
         android:label="@string/title_settings"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_settings" />
 
     <fragment
         android:id="@+id/navigation_about"
