--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,13 +7,13 @@
 
     <fragment
         android:id="@+id/navigation_map"
-        android:name="com.example.battery.ui.home.MapsFragment"
+        android:name="com.example.battery.ui.map.MapsFragment"
         android:label="@string/title_map"
         tools:layout="@layout/fragment_with_map" />
 
     <fragment
         android:id="@+id/navigation_settings"
-        android:name="com.example.battery.ui.dashboard.SettingsFragment"
+        android:name="com.example.battery.ui.settings.SettingsFragment"
         android:label="@string/title_settings"
         tools:layout="@layout/fragment_settings" />
 
